--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ h2 {
 }
 
 /* Start Button */
-button {
+/* button {
     width: 100%;
     height: 100%;
     background: none;
@@ -106,7 +106,7 @@ button img {
 button:hover img {
     transform: scale(1.1);
     transition: transform 0.3s ease;
-}
+} */
 
 /* Progress Bar */
 .progress-container {
